deploy/kubernetes/bchainfriendapi-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bchainfriendapiservice
  namespace: bchainfriendapi
spec:
  ports:
  - name: http
    targetPort: 5002
    port: 5002
  selector:
    app: bchainfriendapi
    microservice: app
